Tidied up a lot of stuff, made menu and high scores resolution independent (ish), and now displaying "game over" dialog to user

--- a/TODO
+++ b/TODO
@@ -24,5 +24,6 @@ Tom
 - Flight strip heading indicators
 - Waypoint addition                         +
 - Tidy up score/time fonts and background
-- Game end(/pause?) buttons
+- Game end button                           +
 - Fullscreen and resolution-independence    +
+- Obstacles
