aircraftspawnevent.py: -> make aircraft spawns go across to other half of the screen if possible (else just uses any random destination; later must go to the furthest point)

--- a/TODO
+++ b/TODO
@@ -15,7 +15,8 @@ Steve
 - Tidy up event handling
 - Double-click waypoints +
 - Start menu
-
+- Highlight collisions
+- Flip flight strips (PGU: prevent widget parent container from responding to event)
 
 Tom
 ---
